# print-cal

./: .gitignore  AI_NOTES.md  Cargo.toml  LICENSE  README.md  SPEC.md  Taskfile.yml
src/: main.rs
